feat(winshell): 重构并添加新功能
- 重命名 RuntimeUtil 为 ProcessBuilderUtil，优化命令执行功能
- 完善搜索功能，添加匹配次数显示和导航按钮
- 新增常用命令菜单，支持 apktool、Android、Java 等命令
- 添加进程终止对话框
- 优化界面样式，增加防抖动处理
- 新增 Tab 补全功能